Couple of fixes.
- Fixed populate command; now users works
- Fixed too high footer

--- a/softhub/static/softhub/css/base.css
+++ b/softhub/static/softhub/css/base.css
@@ -30,7 +30,7 @@ body {
 }
 
 footer {
-    height: 100%;
+    /*height: 100%;*/
 }
 
 /*.sidebar {
